configurations to work with EAP-NOOB with wlan0 serving and wlan1 client

--- a/wpa_supplicant/conf_bckup.conf
+++ b/wpa_supplicant/conf_bckup.conf
@@ -7,5 +7,5 @@ network={
 	bssid=dc:a6:32:2f:3b:08
 	key_mgmt=WPA-EAP
 	eap=NOOB
-	identity="TW3WM0Nni3RijaOVDOziiN+s3@eap-noob.net"
+	identity="noob@eap-noob.net"
 }
