- changed wpa=1 to avoid error in 4-way handshake

--- a/hostapd/hostapd.conf
+++ b/hostapd/hostapd.conf
@@ -4,7 +4,7 @@
 # AP netdevice name (without 'ap' postfix, i.e., wlan0 uses wlan0ap for
 # management frames with the Host AP driver); wlan0 with many nl80211 drivers
 interface=wlan0
-#driver=nl80211
+driver=nl80211
 # In case of atheros and nl80211 driver interfaces, an additional
 # configuration parameter, bridge, may be used to notify hostapd if the
 # interface is included in a bridge. This parameter is not used with Host AP
@@ -1133,7 +1133,7 @@ radius_server_auth_port=1812
 # and/or WPA2 (full IEEE 802.11i/RSN):
 # bit0 = WPA
 # bit1 = IEEE 802.11i/RSN (WPA2) (dot11RSNAEnabled)
-wpa=2
+wpa=1 # Miguel -> Setting WPA2 makes the 4 way handshake at 3/4 fail for some reason. Error:  IE in 3/4 msg does not match with IE in Beacon/ProbeResp
 wpa_key_mgmt=WPA-EAP
 
 # WPA pre-shared keys for WPA-PSK. This can be either entered as a 256-bit
