Changed url and wait time of the server and enable debugging in startup script

--- a/hostapd/eapnoob.conf
+++ b/hostapd/eapnoob.conf
@@ -8,7 +8,7 @@ Version		=	1 			# only  version supported
 Csuite		= 	1			# curver 25519 and SHA256		
 OobDirs		= 	3			#BOTH
 ServerName	= 	Example
-ServerUrl	=  	https://127.0.0.1:8080/sendOOB
+ServerUrl	=  	https://192.168.1.12:3000/sendoob
 Max_WE		=	5			# Maximum Waiting Exchanges,always greater than 1
 OobMessageEncoding =    1                       # 1= base-64 url , 2=ascii		
 Realm           =       eap-noob.net
