--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,22 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+#VS Code
+.vscode/*
+
+!.vscode/settings.json
+
+!.vscode/tasks.json
+
+!.vscode/launch.json
+
+!.vscode/extensions.json
+
+*.code-workspace
+
+
+
+# Local History for Visual Studio Code
+
+.history/
