--- a/wpa_supplicant/wpa_supplicant.conf
+++ b/wpa_supplicant/wpa_supplicant.conf
@@ -4,8 +4,7 @@ update_config=1
 
 network={
 	ssid="test"
-	bssid=dc:a6:32:2f:3b:08
 	key_mgmt=WPA-EAP
 	eap=NOOB
-	identity="TW3WM0Nni3RijaOVDOziiN+s3@eap-noob.net"
+	identity="noob@eap-noob.net"
 }
